dependancy version update refactoring